# prime-commits

./: .gitignore  pyproject.toml
prime_commits/: args.py  extractor.py  gitExtractor.py  graph.py  main.py  main2.py
prime_commits/args/: __init__.py  extractorArgs.py  graphArgs.py  mainArgs.py
prime_commits/extractors/: git.py  hg.py
prime_commits/sclc/: cloc.py  extractor.py  scc.py
prime_commits/utils/: compute.py  config.py  filesystem.py
prime_commits/utils/types/: commitInformation.py  config.py  extractor.py  gitCommitInformation.py  hgCommitInformation copy.py  hgCommitInformation.py  schema.json  schema.py  sclcInformation.py
prime_commits/vcs/: __init__.py  general.py  genericVCS.py  git.py  hg.py
